--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@ body {
 
 .container {
     border: 1px solid black;
-    height: 300px;
-    width: 300px;
+    height: 350px;
+    width: 340px;
     margin-left: auto;
     margin-right: auto;
-    /*background-color: gray;*/
 }
 
 .sub-container {
@@ -25,20 +24,18 @@ body {
 
 header {
     width: 100%;
-    height: 15%;
+    height: 21%;
     border-bottom: 1px solid black;
     text-align: center;
-    /*background-color: lightgreen;*/
 }
 
-h1 {
+h2 {
     margin-top: 0;
 }
 
 main {
     width: 100%;
-    height: 60%;
-    /*background-color: lightpink;*/
+    height: 49%;
 }
 
 form {
@@ -49,29 +46,33 @@ input {
     margin-left: 0;
 }
 
+.correct {
+    background-color: orange;
+}
+
+button {
+    width: 62px;
+}
 .button {
-    width: 40px;
-    /*margin-left: auto;
-    margin-right: auto;*/
+    width: 130px;
     padding-top: 25px;
 }
 
-.questions {
+/*.answers {
     width: 150px;
-    /*border: 1px solid black;*/
-}
+    border: 1px solid black;
+}*/
 
 footer {
     width: 100%;
-    height: 25%;
-    padding-top: 10px;
+    height: 30%;
+    padding-top: 25px;
     border-top: 1px dashed black;
-    /*background-color: lightblue;*/
 }
 
-.player-info {
+/*.player-info {
     width: 140px;
-    /*margin-left: auto;
-    margin-right: auto;*/
-    /*border: 1px solid black;*/
-}
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid black;
+}*/
