--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ form {
     padding-top: 20px;
 }
 
+.answers {
+    height: 80px;
+}
+
 input {
     margin-left: 0;
 }
@@ -57,6 +61,10 @@ button {
     width: 130px;
     padding-top: 25px;
 }
+
+/*.hide-button {
+    visibility: hidden;
+}*/
 
 /*.answers {
     width: 150px;
