--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2 {
 
 main {
     width: 100%;
-    height: 49%;
+    height: 52%;
 }
 
 form {
@@ -51,7 +51,11 @@ input {
 }
 
 .correct {
-    background-color: orange;
+    background-color: lightgreen;
+}
+
+.incorrect {
+    background-color: pink;
 }
 
 button {
@@ -59,7 +63,9 @@ button {
 }
 .button {
     width: 130px;
-    padding-top: 25px;
+    position: relative;
+    top: 20px;
+    /*border: 1px solid black;*/
 }
 
 /*.hide-button {
@@ -73,8 +79,8 @@ button {
 
 footer {
     width: 100%;
-    height: 30%;
-    padding-top: 25px;
+    height: 27%;
+    padding-top: 18px;
     border-top: 1px dashed black;
 }
 
@@ -84,3 +90,15 @@ footer {
     margin-right: auto;
     border: 1px solid black;
 }*/
+
+.display-answer-container {
+    /*border: 1px solid black;*/
+    height: 15px;
+    width: 250px;
+    position: relative;
+    top: 30px;
+}
+
+.hide {
+    visibility: hidden;
+}
