--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 .container {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: 1px solid black;
     height: 350px;
     width: 340px;
@@ -19,7 +20,6 @@ body {
     padding-left: 0;
     margin-left: auto;
     margin-right: auto;
-    /*border: 1px solid black;*/
 }
 
 header {
@@ -27,6 +27,7 @@ header {
     height: 21%;
     border-bottom: 1px solid black;
     text-align: center;
+    background-color: #7BCCCC;
 }
 
 h2 {
@@ -36,6 +37,7 @@ h2 {
 main {
     width: 100%;
     height: 52%;
+    background-color: #E6FBFB;
 }
 
 form {
@@ -61,38 +63,14 @@ input {
 button {
     width: 62px;
 }
-.button {
+
+.submit-button-container {
     width: 130px;
     position: relative;
     top: 20px;
-    /*border: 1px solid black;*/
 }
-
-/*.hide-button {
-    visibility: hidden;
-}*/
-
-/*.answers {
-    width: 150px;
-    border: 1px solid black;
-}*/
-
-footer {
-    width: 100%;
-    height: 27%;
-    padding-top: 18px;
-    border-top: 1px dashed black;
-}
-
-/*.player-info {
-    width: 140px;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px solid black;
-}*/
 
 .display-answer-container {
-    /*border: 1px solid black;*/
     height: 15px;
     width: 250px;
     position: relative;
@@ -101,4 +79,12 @@ footer {
 
 .hide {
     visibility: hidden;
+}
+
+footer {
+    width: 100%;
+    height: 27%;
+    padding-top: 18px;
+    border-top: 1px solid black;
+    background-color: #7BCCCC;
 }
